fix weirdly stretched images in fitpact
by adding "align-items: flex-start;" to the images parent container

--- a/assets/css/fitpact.css
+++ b/assets/css/fitpact.css
@@ -103,6 +103,8 @@ small {
   margin-right: 12vw;
   display: flex;
   line-height: 1.5;
+
+  align-items: flex-start;
 }
 
 h2 {
@@ -305,6 +307,7 @@ strong {
 .info-arch {
   text-align: left;
   display: flex;
+  align-items: flex-start;
 }
 
 .sketch-heading {
